[project]
name = "sapient-msg"
version = "0.2.1"
description = "SAPIENT protobuf bindings (BSI Flex 335 v2.0)"
license = "MIT"
authors = [
    { name = "Virtuoz", email = "virtuoz@demo-iot.technology" },
]
requires-python = ">=3.11"
dependencies = [
    "protobuf>=4.25,<7",
]

[project.urls]
Repository = "https://github.com/nbowisdar/sapient-msg"
Homepage = "https://github.com/nbowisdar/sapient-msg"
Documentation = "https://github.com/nbowisdar/sapient-msg/blob/main/IntegrationGuide.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sapient_msg"]

[tool.hatch.build.targets.sdist]
include = [
    "sapient_msg/**/*.proto",
    "sapient_msg/**/*.py",
    "sapient_msg/**/*.pyi",
]
